--- a/jinxiao.html
+++ b/jinxiao.html
@@ -25,6 +25,9 @@
 			.ziti{
 				font-size: 25px;
 			}
+			.yanse{
+				color: white;
+			}
 		</style>
 
 	</head>
@@ -92,8 +95,8 @@
 
 		<div class="p1 ziti">今日第1次使用进门</div>
 		&nbsp;
-		<table class="p2" ; align="center">
-			<tr>
+		<table class="p2 yanse" ; align="center">
+			<tr">
 				<td class="p3">姓名</td>
 				<td contentEditable="true">：李钦</td>
 			</tr>
